<resources>
    <string name="app_name">"Map of events"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Register</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_button_to_locate_a_user_on_a_map">A button to locate a user on a map</string>
    <string name="accept_command">Accept</string>
    <string name="age_category">Age category</string>
    <string name="name_event">Name of event</string>
    <string name="description">Description</string>
    <string name="attach_a_photo_to_a_review">Attach a photo to a review</string>
    <string name="thumbnail_for_an_uploaded_image">Thumbnail for an uploaded image</string>
    <string name="title">Name of event</string>
    <string name="login_button_text">If you don\'t have an account click to Register</string>
    <string name="registration_button_text">If you have account - fill all fields and click login</string>
    <string name="back">Back</string>
    <string name="inform1">If you have account click - Back</string>
    <string name="inform2">If you don\'t have account you must to fill all fields and click - Register</string>
    <string name="age">Сhoose an age category</string>
    <string name="choose_character_of_event">Choose character of event</string>
    <string name="second_spinner">Second Spinner</string>
    <string name="event_type">Event_type</string>

    <string-array name="rating_values2">
        <item>Sport event</item>
        <item>Conferences</item>
        <item>Festivals</item>
        <item>Concert</item>
        <item>Mixed</item>
    </string-array>


    <string-array name="rating_values">
        <item>For all</item>
        <item>For students</item>
        <item>For kids</item>
        <item>For young people</item>
    </string-array>
</resources>