<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EventDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/name_event"
                android:padding="5dp"
                android:background="#ffffff"
                android:textColorHint="@color/common_google_signin_btn_text_dark_disabled"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEventField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="#616161"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTILReviewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="#ffffff"
                android:hint="@string/description"
                android:padding="5dp"
                android:textColorHint="@color/common_google_signin_btn_text_dark_disabled"
                app:hintTextColor="@color/buttonBackColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEventField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:textColor="@color/black"
                    android:textColorHint="#FF5722"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="#FFFFFF"
                android:hint="@string/age_category"
                android:padding="5dp"
                app:hintTextColor="@color/black">

                <Spinner
                    android:id="@+id/idSpinnerReviewRating"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColorHint="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/idSpinnerReviewRating"
                    android:text="@string/age"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/second_spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="#FFFFFF"
                android:hint="@string/second_spinner"
                android:padding="5dp"
                app:hintTextColor="@color/black">

                <Spinner
                    android:id="@+id/secondSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textColorHint="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/secondSpinner"
                    android:text="@string/choose_character_of_event"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageEventField2"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="bottom|start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/add_photo2"
                    android:scaleType="fitXY"
                    android:visibility="visible" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/imageEventField"
                    android:layout_width="253dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/add_photo"
                    android:src="@drawable/proba"
                    android:backgroundTint="@color/gps_img_color"
                    app:fabSize="normal" />
            </LinearLayout>

            <Button
                android:id="@+id/EventAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:onClick="button_submit"
                android:text="@string/accept_command"
                android:textAllCaps="false"
                android:textColor="@android:color/white" /><!-- Цвет текста кнопки -->


        </LinearLayout>

        <ProgressBar
            android:id="@+id/idPBLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_back"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>
